# demo_fastapi-django-app

./: .dist.env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: entrypoint.sh
src/django_app/: asgi.py
src/django_app/config/: settings.py
src/django_app/core/: admin.py  blockchain_config.py  celery.py  models.py  serializers.py  tasks.py
src/django_app/core/migrations/: 0001_initial.py
src/fastapi_app/: dependencies.py  errors.py  settings.py  utils.py
src/fastapi_app/routes/: auth.py  blocks.py
src/fastapi_app/schemas/: __init__.py  auth.py  blocks.py
